## Process this file with automake to produce Makefile.in
# Makefile.am for libdivxdecore
# $Id: Makefile.am,v 1.1 2001/01/23 08:10:53 sian Exp $

noinst_LTLIBRARIES = libdivxdecore.la
DEFS = -D_DECORE
#INCLUDES =

libdivxdecore_la_SOURCES = \
	basic_prediction.c basic_prediction.h \
	decore.c decore.h \
	getbits.c \
	global.h \
	idct.c idct.h \
	mp4_block.c mp4_block.h \
	mp4_decoder.c mp4_decoder.h \
	mp4_header.c mp4_header.h \
	mp4_mblock.c mp4_mblock.h \
	mp4_picture.c \
	mp4_predict.c mp4_predict.h \
	mp4_recon.c \
	mp4_vld.c mp4_vld.h \
	portab.h \
	postprocess.c postprocess.h \
	transferIDCT.c transferIDCT.h \
	yuv2rgb.h
