## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Sat Feb  7 00:44:20 2004.
# $Id: Makefile.am,v 1.1 2004/02/14 05:12:33 sian Exp $

noinst_LTLIBRARIES = libenflej2k.la
#INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/lib
EXTRA_DIST = LICENSE

libenflej2k_la_SOURCES = \
	j2k.c j2k.h \
	tcd.c tcd.h \
	t1.c t1.h \
	t2.c t2.h \
	tgt.c tgt.h \
	mqc.c mqc.h \
	bio.c bio.h \
	int.c int.h \
	mct.c mct.h \
	dwt.c dwt.h \
	cio.c cio.h \
	fix.c fix.h \
	pi.c pi.h
