## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Fri Nov 18 23:02:45 2011.

noinst_LTLIBRARIES = libenflej2k.la
#INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/lib
EXTRA_DIST = LICENSE

CFLAGS_POST = -Wno-error
libenflej2k_la_SOURCES = \
	j2k.c j2k.h \
	tcd.c tcd.h \
	t1.c t1.h \
	t2.c t2.h \
	tgt.c tgt.h \
	mqc.c mqc.h \
	bio.c bio.h \
	int.c int.h \
	mct.c mct.h \
	dwt.c dwt.h \
	cio.c cio.h \
	fix.c fix.h \
	pi.c pi.h
