## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Wed Jan 28 02:23:44 2004.

noinst_LTLIBRARIES = libenflempeg2.la
INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/lib
##CFLAGS_POST = -O3 -fomit-frame-pointer -fno-common -mcpu=pentiumpro

libenflempeg2_la_SOURCES = \
	alloc.c \
	decode.c \
	idct_alpha.c \
	motion_comp.c \
	motion_comp_mmx.c \
	slice.c \
	cpu_accel.c \
	header.c \
	idct_altivec.c \
	motion_comp_alpha.c \
	motion_comp_vis.c \
	vlc.h \
	cpu_state.c \
	idct.c \
	idct_mmx.c \
	motion_comp_altivec.c \
	mpeg2_internal.h \
	mpeg2.h \
	attributes.h \
	mmx.h
