## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Mon Sep  3 10:08:27 2001.
# $Id: Makefile.am,v 1.15 2001/09/03 01:44:32 sian Exp $

SUBDIRS = ungif mpeg_lib libmpeg3 mng avifile mpglib libmpeg2 opendivx
DIST_SUBDIRS = ungif mpeg_lib libmpeg3 mng avifile mpglib libmpeg2 opendivx
