## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Thu Nov 13 22:33:08 2003.
# $Id: Makefile.am,v 1.16 2003/11/17 13:57:15 sian Exp $

SUBDIRS = ungif mpeg_lib libmpeg3 mng avifile mpglib libmpeg2 divx avcodec
DIST_SUBDIRS = ungif mpeg_lib libmpeg3 mng avifile mpglib libmpeg2 divx avcodec
