## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Thu Jan  1 20:00:06 2004.
# $Id: Makefile.am,v 1.17 2004/01/03 10:28:12 sian Exp $

SUBDIRS = ungif mpeg_lib libmpeg3 mng avifile mpglib libmpeg2.old libmpeg2 divx avcodec
DIST_SUBDIRS = ungif mpeg_lib libmpeg3 mng avifile mpglib libmpeg2.old libmpeg2 divx avcodec
