## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Sat Apr 28 03:26:27 2001.
# $Id: Makefile.am,v 1.4 2001/04/27 19:16:10 sian Exp $

if ENABLE_PRIVATE
SUBDIRS = png jpeg glic
DIST_SUBDIRS = png jpeg glic
else
SUBDIRS = png jpeg
DIST_SUBDIRS = png jpeg
endif
