## Process this file with automake to produce Makefile.in
# Makefile.am for enfle
# Last Modified: Fri Dec 26 12:17:15 2003.
# $Id: Makefile.am,v 1.5 2003/12/27 14:27:37 sian Exp $

# if ENABLE_PRIVATE
# SUBDIRS = png jpeg glic
# DIST_SUBDIRS = png jpeg
# else
SUBDIRS = png jpeg
DIST_SUBDIRS = png jpeg
# endif
